# greybus-for-zephyr

./: .gitmodules  CMakeLists.txt  Kconfig  LICENSE  README.rst  west.yml  zephyr-aligned-allocators.patch  zephyr-dynamic-pthread-stacks.patch  zephyr-gpio-emul.patch  zephyr-gpio-get-direction.patch  zephyr-sys-byteorder-posix.patch
.github/workflows/: compliance.yml  module.yml
cmake/: greybus.cmake
doc/: 802154-setup.rst  ble-setup.rst  blinky.sh  cc1352r_sensortag.rst  gpio.rst  i2c.rst  linux-setup.rst  old.md  spi.rst
dts/bindings/greybus/: zephyr,greybus-bundle.yaml  zephyr,greybus-control.yaml  zephyr,greybus-cport.yaml  zephyr,greybus-gpio-control.yaml  zephyr,greybus-i2c-control.yaml  (+5 more)
include/: list.h
include/greybus/: debug.h  greybus.h  platform.h
include/greybus-utils/: manifest.h  utils.h
scripts/: gbutil.py  manifesto.py
subsys/greybus/: CMakeLists.txt  Kconfig  audio.c  camera.c  control-gpb.c  gpio.c  greybus-core.c  greybus-manifest.c  greybus-stubs.c  greybus-stubs.h  greybus-unipro.c  hid.c  i2c.c  lights.c  loopback.c  power_supply.c  pwm-protocol.c  sdio.c  spi-gb.h  spi.c  uart.c  usb.c  vibrator.c
tests/subsys/greybus/gpio/: CMakeLists.txt  README.txt  prj.conf  testcase.yaml
tests/subsys/greybus/gpio/boards/: mps2_an385.conf  mps2_an385.overlay  native_posix.conf  native_posix.overlay  native_posix_64.overlay  qemu_cortex_m3.conf  qemu_cortex_m3.overlay
tests/subsys/greybus/gpio/dts/bindings/: test,greybus-gpio.yaml
tests/subsys/greybus/gpio/src/: gpio-sim.c  gpio.c  main.c  test-greybus-gpio.h
zephyr/: module.yml
(+70 files in other folders)
